chore: improve button visibility, add empty message to watchlist, fix pipeline badge

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -38,8 +38,8 @@ body {
 .button-link {
   padding: 0.75rem 1.5rem;
   border: 0;
+  border: 0.2rem solid var(--color-primary);
   border-radius: 8px;
-  background: var(--color-primary);
   color: var(--color-text-white);
   cursor: pointer;
   font-size: 1rem;
