--- a/src/shared/ui/button/button.scss
+++ b/src/shared/ui/button/button.scss
@@ -1,6 +1,7 @@
 .button {
   padding: 0.75rem 1.5rem;
   border: 0;
+  border: 0.2rem solid var(--color-primary);
   border-radius: 8px;
   background: var(--color-primary);
   color: var(--color-text-white);
@@ -15,6 +16,7 @@
 }
 
 .button--danger {
+  border: 0.2rem solid var(--color-danger);
   background: var(--color-danger);
 
   &:hover {
